# fdqn-te-plus-ns3

./: .gitignore  .lock-ns3_linux_build  README.md  README_eval.md  dashboard_v3.html  explainer.html  fdqnte_dashboard.jsx  fdqnte_rl_history.json  plot_fdqn.py  run_fdqn_te_plus.py  run_multiseed.sh  run_scalability.sh  test_checkpoint.json
eval_output/: comparison_summary.csv  history_DQN_Standard.csv  history_FDQN-TEplus_(complet).csv  history_FDQN_sans_PEPM.csv
fdqn-dashboard/: index.html  package-lock.json  package.json
fdqn-dashboard/src/: App.jsx
model/: CMakeLists.txt  README.md  addqn_agent.py  aggregate_results.py  analyze_results.py  baseline_agents.py  evaluation.py  fdqn_config.py  fedmeta_drl.py  generate_graphs.py  generate_robustness.py  pepm_lstm.py  plot_fdqn_metrics.py  rl_server.py  rl_server_dqnleach.py  rl_server_eval.py  rl_server_noIFO.py  rl_server_nofed.py  rl_server_nopepm.py
results/: comparison_metrics.csv  fdqnte_summary.csv  result.odt
results/energy/: fdqnte_energy.csv
results/rl/: fdqnte_rl_history.json
results/topology/: fdqnte_topology_final.csv  fdqnte_topology_initial.csv  fdqnte_topology_r0002.csv  fdqnte_topology_r0004.csv  fdqnte_topology_r0006.csv  fdqnte_topology_r0008.csv  fdqnte_topology_r0010.csv  fdqnte_topology_r0012.csv  fdqnte_topology_r0013.csv  fdqnte_topology_r0014.csv  fdqnte_topology_r0015.csv  fdqnte_topology_r0016.csv  fdqnte_topology_r0017.csv  fdqnte_topology_r0018.csv  fdqnte_topology_r0019.csv  fdqnte_topology_r0020.csv  fdqnte_topology_r0022.csv  fdqnte_topology_r0024.csv  fdqnte_topology_r0026.csv  fdqnte_topology_r0028.csv  fdqnte_topology_r0030.csv  fdqnte_topology_r0032.csv  fdqnte_topology_r0034.csv  fdqnte_topology_r0036.csv  fdqnte_topology_r0038.csv  fdqnte_topology_r0040.csv  fdqnte_topology_r0042.csv  fdqnte_topology_r0044.csv  (+27 more)
results_eval/: comparison_table.csv
scratch/: Ifo clustering noifo patch.h  addqn-routing.h  eval_common.h  eval_config.h  fdqn_config.h  fdqn_leach.cc  fdqn_noIFO.cc  fdqn_te_plus.cc  fdqn_te_plus_eval.cc  fdqn_te_plus_eval_robustness.cc  fdqn_te_plus_noFed.cc  fdqn_te_plus_noPEPM.cc  heed_sim.cc  ifo_clustering.h  leach_energy.h  leach_sim.cc  node_state.h  qrouting_sim.cc
utils/: fdqnte-stats.h
(+1960 files in other folders)
